CHANGE HISTORY of the CcPy
---------------------------------------------------

0.8 - 19 October 2014
------------------------------
    - CHANGED Got rid of naive internal scheduler for the sake of an external one. This opens a possibility for more flexible scheduling and updating ccpy from the build script.
    - FIXED recursively kill all children spawned by ccpy when starting it

0.7 - 01 April 2014
-----------------------------
   - ADDED a possibility to specify executable exit codes treated as warning
   - ADDED support for Python 3

0.6 - 21 July 2013
-----------------------------
   - FIXED non-ASCII encoded tasks output is not properly handled
   - FIXED errors like email send errors resulted failstops when executing in 'schedule' mode
   - FIXED build infinitely stucks on make/exec task when the parent process finishes but one or more children remain active
   - FIXED Logger did not work correctly when the log file was rotated by the external programs such as newsyslog and logrotate
   - CHANGED added --force-continue and --force--once command-line options and accordingly adjusted schedule settings in /etc/ccpyd.conf
   - CHANGED Host source code at GitHub
   - ADDED SMTP Server location and login credentials
   

0.5 (rev. 168) - 18 May 2010
-----------------------------
  - ADDED: percentage of allocated task time to the report
  - FIXED: too much output produced by a build task (make/execute/svn) caused this task to block forever
           on subprocess.wait() or to crop the output
  - FIXED: incorrect elapsed build time reported when the build has been forcibly rerminated because of timeout
  - FIXED: baseDirectory => workingDirectory in "exec" element
  - FIXED: added current directory to the search path when launching executable
  - CHANGED: removed 'preferUpdateToCheckout' option (the new behavior is as this flag is set)
  - ADDED: 'preCleanWorkingDirectory' setting for svn